--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "d3": "^6.1.1",
-    "vue": "^2.6.12"
+    "tinycolor2": "^1.4.1",
+    "vue": "^2.6.12",
+    "vue-chartjs": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
