--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "axios-cookiejar-support": "^1.0.0",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "d3": "^6.1.1",
     "tinycolor2": "^1.4.1",
+    "tough-cookie": "^4.0.0",
     "vue": "^2.6.12",
     "vue-chartjs": "^3.5.1",
     "vue-resize-directive": "^1.2.0"
